--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-ansible
+## Ansible
+ansible-core>=2.12,<2.13
+ansible-lint
+
+## Dev
+black
+molecule
+molecule-vagrant
+pylint
+pytest
+pytest-testinfra
