--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,14 @@ jobs:
         with:
           python-version: "3.x"
       - uses: pre-commit/action@v2.0.3
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+      - run: pip3 install ansible ansible-lint
+      - run: ansible-lint --force-color
