--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,77 @@
 ---
-# defaults file for ansible-role-libretime
+# libretime_root_url: required
+libretime_user: www-data
+libretime_listen_port: 80
+libretime_max_upload_size: 512M
+
+libretime_checkout_url: https://github.com/libretime/libretime.git
+libretime_checkout_version: main
+libretime_checkout_dest: /opt/libretime
+
+libretime_home: /var/lib/libretime
+libretime_log_dir: /var/log/libretime
+libretime_config_dir: /etc/airtime
+libretime_config_filepath: "{{ libretime_config_dir }}/airtime.conf"
+
+# > Setup
+########################################################################################
+libretime_setup: true
+
+# libretime_legacy_api_key: required
+
+libretime_storage_dir: /srv/libretime/data
+
+libretime_database_host: localhost
+libretime_database_port: 5432
+libretime_database_name: libretime
+libretime_database_user: libretime
+libretime_database_password: libretime
+
+libretime_rabbitmq_host: localhost
+libretime_rabbitmq_port: 5672
+libretime_rabbitmq_vhost: /libretime
+libretime_rabbitmq_user: libretime
+libretime_rabbitmq_password: libretime
+
+libretime_icecast_source_password: hackme
+libretime_icecast_relay_password: hackme
+libretime_icecast_admin_password: hackme
+
+# > Analyzer
+########################################################################################
+libretime_analyzer_install: true
+
+# > Playout
+########################################################################################
+libretime_playout_install: true
+
+# > Worker
+########################################################################################
+libretime_worker_install: true
+
+# > API
+########################################################################################
+libretime_api_install: true
+libretime_api_web_root: /usr/share/libretime/api
+
+# > Legacy
+########################################################################################
+libretime_legacy_install: true
+libretime_legacy_web_root: /usr/share/libretime/legacy
+
+# > Postgresql
+########################################################################################
+libretime_postgresql_install: true
+
+# > RabbitMQ
+########################################################################################
+libretime_rabbitmq_install: true
+
+# > Icecast
+########################################################################################
+libretime_icecast_install: true
+
+# > Liquidsoap
+########################################################################################
+libretime_liquidsoap_install: true
+# libretime_liquidsoap_package_url:
