--- a/tasks/apache.yml
+++ b/tasks/apache.yml
@@ -16,6 +16,9 @@
     name: "{{ item }}"
   with_items:
     - rewrite
+    - proxy
+    - proxy_http
+    - proxy_uwsgi
 
 - name: deploy apache2 conf
   template:
