--- a/tasks/analyzer.yml
+++ b/tasks/analyzer.yml
@@ -3,7 +3,7 @@
   vars:
     packages_path: "{{ libretime_checkout_dest }}/analyzer"
 
-- name: install analyzer package
+- name: install analyzer python package
   pip:
     name: "file://{{ libretime_checkout_dest }}/analyzer"
   notify: restart libretime-analyzer
