feat: always deploy config file

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -89,6 +89,21 @@
       owner: "{{ libretime_user }}"
       group: "{{ libretime_user }}"
 
+- name: deploy configuration file
+  template:
+    src: libretime/config.ini.j2
+    dest: "{{ libretime_config_filepath }}"
+    owner: "{{ libretime_user }}"
+    group: "{{ libretime_user }}"
+    mode: 0640
+    backup: true
+  notify:
+    - restart libretime-analyzer
+    - restart libretime-api
+    - restart libretime-playout
+    - restart libretime-liquidsoap
+    - restart libretime-celery
+
 - name: install python3
   apt:
     state: present
