--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,6 +1,7 @@
 ---
 - name: Converge
   hosts: all
+  gather_facts: true
   become: yes
 
   tasks:
@@ -24,6 +25,6 @@
       include_role:
         name: ansible-role-libretime
       vars:
-        libretime_root_url: http://192.168.121.10:8888/
+        libretime_root_url: http://{{ ansible_default_ipv4.address }}:8888/
         libretime_listen_port: 8888
         libretime_legacy_api_key: key
