--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -25,6 +25,5 @@
       include_role:
         name: ansible-role-libretime
       vars:
-        libretime_root_url: http://{{ ansible_default_ipv4.address }}:8888/
+        libretime_root_url: http://{{ ansible_default_ipv4.address }}:{{ libretime_listen_port }}/
         libretime_listen_port: 8888
-        libretime_legacy_api_key: key
