feat: deploy apache config after legacy

--- a/tasks/legacy.yml
+++ b/tasks/legacy.yml
@@ -54,6 +54,23 @@
     dest: "{{ libretime_legacy_web_root }}"
     remote_src: yes
 
+- name: deploy apache2 conf
+  template:
+    src: apache/libretime.conf.j2
+    dest: /etc/apache2/sites-available/libretime.conf
+    owner: root
+    group: root
+    mode: 0644
+    backup: true
+  notify: restart apache2
+
+- name: enable apache2 conf
+  file:
+    src: /etc/apache2/sites-available/libretime.conf
+    dest: /etc/apache2/sites-enabled/libretime.conf
+    state: link
+  notify: restart apache2
+
 - name: deploy legacy logrotate config
   template:
     src: logrotate/libretime-legacy.conf.j2
