--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -63,6 +63,7 @@ libretime_rabbitmq_password: libretime
 ########################################################################################
 libretime_icecast_install: true
 
+libretime_icecast_listen_port: 8000
 libretime_icecast_source_password: hackme
 libretime_icecast_relay_password: hackme
 libretime_icecast_admin_password: hackme
