--- a/tasks/postgresql.yml
+++ b/tasks/postgresql.yml
@@ -10,23 +10,23 @@
   block:
     - name: create postgresql database user
       community.postgresql.postgresql_user:
-        name: "{{ libretime_database_user }}"
-        password: "{{ libretime_database_password }}"
+        name: "{{ libretime_postgresql_user }}"
+        password: "{{ libretime_postgresql_password }}"
 
     - name: create postgresql database
       community.postgresql.postgresql_db:
-        name: "{{ libretime_database_name }}"
+        name: "{{ libretime_postgresql_name }}"
         encoding: UTF-8
         template: template0
-        owner: "{{ libretime_database_user }}"
+        owner: "{{ libretime_postgresql_user }}"
 
     - name: probe database schema table
       community.postgresql.postgresql_query:
-        db: "{{ libretime_database_name }}"
-        login_host: "{{ libretime_database_host }}"
-        login_port: "{{ libretime_database_port }}"
-        login_user: "{{ libretime_database_user }}"
-        login_password: "{{ libretime_database_password }}"
+        db: "{{ libretime_postgresql_name }}"
+        login_host: "{{ libretime_postgresql_host }}"
+        login_port: "{{ libretime_postgresql_port }}"
+        login_user: "{{ libretime_postgresql_user }}"
+        login_password: "{{ libretime_postgresql_password }}"
         query: >
           SELECT EXISTS (
             SELECT FROM information_schema.tables
