--- a/tasks/legacy.yml
+++ b/tasks/legacy.yml
@@ -46,13 +46,13 @@
   copy:
     src: "{{ libretime_checkout_dest }}/legacy/"
     dest: "{{ libretime_legacy_web_root }}"
-    remote_src: yes
+    remote_src: true
 
 - name: copy VERSION file in the web root
   copy:
     src: "{{ libretime_checkout_dest }}/VERSION"
     dest: "{{ libretime_legacy_web_root }}"
-    remote_src: yes
+    remote_src: true
 
 - name: deploy apache2 conf
   template:
