--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -2,7 +2,7 @@
 - name: install worker python package # noqa no-handler
   pip:
     name: "file://{{ libretime_checkout_dest }}/worker"
-  notify: restart libretime-celery
+  notify: restart libretime-worker
   when: libretime_checkout is changed
 
 - name: create worker working directory
@@ -14,5 +14,5 @@
 
 - import_tasks: _systemd.yml
   vars:
-    service_name: libretime-celery
-  notify: restart libretime-celery
+    service_name: libretime-worker
+  notify: restart libretime-worker
